# voxels

./: .gitignore  .tasks  CMakeLists.txt  README.md
libs/noiseutils/: CMakeLists.txt
src/: app.cpp  app.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  color.cpp  color.hpp  mesh.cpp  mesh.hpp  resource.cpp  resource.hpp  shader.cpp  shader.hpp  superchunk.cpp  superchunk.hpp  texture.cpp  texture.hpp  voxel.cpp  voxel.hpp  window.cpp  window.hpp
src/o2d/: sprite.cpp  sprite.hpp
src/shaders/: o2d.hpp  regular.hpp
src/util/: clock.cpp  clock.hpp  data.cpp  data.hpp  events.cpp  events.hpp  transform.cpp  transform.hpp
